# api-gerenciamento-consultas-medicas

./: .env.example  DATABASE_SETUP.md  DECISIONS.md  Dockerfile  README.md  ROLLBACK.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
apps/: conftest.py
apps/accounts/: tests.py
apps/appointments/: serializers.py  services.py  tests.py  views.py
apps/appointments/migrations/: 0001_initial.py
apps/professionals/: apps.py  serializers.py  tests.py  views.py
apps/professionals/migrations/: 0001_initial.py
backend/: settings.py
backend/core/: middleware.py  urls.py
backend/core/settings/: base.py  local.py  production.py  staging.py
